// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> it can render with a different HTML tag: "h1" 1`] = `
.c0 {
  font-size: 48px;
  line-height: 54px;
  -webkit-letter-spacing: -1.25px;
  -moz-letter-spacing: -1.25px;
  -ms-letter-spacing: -1.25px;
  letter-spacing: -1.25px;
  color: #2C3236;
  text-align: inherit;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-weight: 800;
  margin: 0;
  margin-bottom: 24px;
}

<h1
  class="c0"
>
  Header
</h1>
`;

exports[`<Heading /> it can render with a different HTML tag: "h2" 1`] = `
.c0 {
  font-size: 38px;
  line-height: 46px;
  -webkit-letter-spacing: -0.85px;
  -moz-letter-spacing: -0.85px;
  -ms-letter-spacing: -0.85px;
  letter-spacing: -0.85px;
  color: #2C3236;
  text-align: inherit;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-weight: 700;
  margin: 0;
  margin-bottom: 24px;
}

<h2
  class="c0"
>
  Header
</h2>
`;

exports[`<Heading /> it can render with a different HTML tag: "h3" 1`] = `
.c0 {
  font-size: 28px;
  line-height: 36px;
  -webkit-letter-spacing: -0.45px;
  -moz-letter-spacing: -0.45px;
  -ms-letter-spacing: -0.45px;
  letter-spacing: -0.45px;
  color: #2C3236;
  text-align: inherit;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-weight: 700;
  margin: 0;
  margin-bottom: 24px;
}

<h3
  class="c0"
>
  Header
</h3>
`;

exports[`<Heading /> it can render with a different HTML tag: "h4" 1`] = `
.c0 {
  font-size: 24px;
  line-height: 32px;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
  color: #2C3236;
  text-align: inherit;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-weight: 700;
  margin: 0;
  margin-bottom: 24px;
}

<h4
  class="c0"
>
  Header
</h4>
`;

exports[`<Heading /> it can render with a different HTML tag: "h5" 1`] = `
.c0 {
  font-size: 18px;
  line-height: 26px;
  -webkit-letter-spacing: -0.02px;
  -moz-letter-spacing: -0.02px;
  -ms-letter-spacing: -0.02px;
  letter-spacing: -0.02px;
  color: #2C3236;
  text-align: inherit;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-weight: 700;
  margin: 0;
  margin-bottom: 24px;
}

<h5
  class="c0"
>
  Header
</h5>
`;

exports[`<Heading /> it can render with a different HTML tag: "h6" 1`] = `
.c0 {
  font-size: 15px;
  line-height: 20px;
  -webkit-letter-spacing: -0.01px;
  -moz-letter-spacing: -0.01px;
  -ms-letter-spacing: -0.01px;
  letter-spacing: -0.01px;
  color: #2C3236;
  text-align: inherit;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-weight: 700;
  margin: 0;
  margin-bottom: 24px;
}

<h6
  class="c0"
>
  Header
</h6>
`;

exports[`<Heading /> renders without  a11y violations 1`] = `
.c0 {
  font-size: 48px;
  line-height: 54px;
  -webkit-letter-spacing: -1.25px;
  -moz-letter-spacing: -1.25px;
  -ms-letter-spacing: -1.25px;
  letter-spacing: -1.25px;
  color: #2C3236;
  text-align: inherit;
  font-family: "Open Sans",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-weight: 800;
  margin: 0;
  margin-bottom: 24px;
}

<div>
  <h1
    class="c0"
  >
    Text
  </h1>
</div>
`;
